--- a/cover.css
+++ b/cover.css
@@ -130,14 +130,14 @@ body {
   /* version standardisée */
 }
 
-.masthead-brand {
+.text-center{
   float: left;
   padding: 15px;
   text-align: center;
   width: 100%;
 }
 
-.masthead-brand {
+.text-center {
   float: none;
 }
 
@@ -145,6 +145,6 @@ body {
   .cover {
     -webkit-backdrop-filter: blur(5%);
     backdrop-filter: blur(5%);
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
   }
 }
